# triebwerk

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TODO_code_review.md  build_engine.sh  engine_metrics.json  engine_rollout.py  fast_v2_metrics.json  intermediate_goal.md  jetson_compat.py  plot_baseline.py  plot_comparison_v2.py  plot_final_comparison.py  pyproject.toml  test_grpo.py  train.py  train_gsm8k.py  train_gsm8k_engine.py  train_gsm8k_trl_engine.py
benchmark/: bench_hf.py  bench_ours.py  bench_trl.py  bench_vllm.py  compare.py  compare_trl.py  config.py
benchmark/results/: hf_generate.json  ours.json  trl.json  vllm.json
engine/: CMakeLists.txt  bench_gemv.cu  bench_nf4.py  convert_weights.py  debug_nf4_crash.py  engine.cpp  engine_py.cpp  inspect_rollout.py  inspect_rollout2.py  inspect_rollout3.py  inspect_rollout4.py  kernels.cu  model.h  nf4_gemv_fast.cu  test_all.py  weights.cpp
examples/: countdown.py  custom_reward.py  gsm8k.py  letter_counting.py
grpo_trainer_lora_model/: adapter_config.json
improvements/: 01_profile_results.json
triebwerk/: __init__.py  banner.py  compat.py  engine.py  generation.py  lora_sync.py  rewards.py  utils.py
triebwerk/trainers/: __init__.py  base.py  dg.py  grpo.py
unsloth_compiled_cache/: UnslothGRPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothRLOOTrainer.py
unsloth_compiled_cache/.cache/flashinfer/0.6.1/89/cached_ops/sampling/: .ninja_deps  .ninja_log  build.ninja
