[project]
name = "triebwerk"
version = "0.1.0"
description = "Fast LoRA fine-tuning engine for LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets",
    "bitsandbytes",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
triebwerk = "train:main"
